<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:background="@color/colorPrimary"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"/>

    <ImageView

        android:id="@+id/loginPageLogo"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/logo_login"
        android:src="@drawable/login_page_logo"
         />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whiteStranParentHafl"
        android:textSize="18sp" />

    <EditText
        android:textSize="18sp"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/whiteStranParentHafl" />

    <Button
        android:textSize="18sp"
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:textSize="18sp"
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/background_light"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/login_reg_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"/>


</LinearLayout>